corrijo capitulo 4, quedan pendientes un par de dudas

--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -173,3 +173,13 @@ author = {Jesse Hughes and Bart Jacobs},
   year={2017},
   url={https://api.semanticscholar.org/CorpusID:9734802}
 }
+
+@book{manes:1976,
+  title={Algebraic Theories},
+  author={Ernest G. Manes},
+  isbn={978-1-4612-9862-5},
+  series={Graduate Texts in Mathematics},
+  year={1976},
+  publisher={Springer New York, NY},
+  doi={https://doi.org/10.1007/978-1-4612-9860-1}
+}
