--- a/doc/latex/Structures/ConcurrentMonad.tex
+++ b/doc/latex/Structures/ConcurrentMonad.tex
@@ -44,7 +44,7 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -58,7 +58,7 @@
 \\
 %
 \>[4]\AgdaField{eqₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -68,7 +68,7 @@
 \\
 %
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -81,8 +81,8 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaField{porderₘ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaField{porderₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -94,7 +94,7 @@
 \\
 %
 \>[4]\AgdaField{return}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -106,8 +106,8 @@
 \AgdaBound{A}\<%
 \\
 %
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}>>=\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≫=\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -126,10 +126,10 @@
 \AgdaBound{A}\<%
 \\
 %
-\>[4]\AgdaField{comp≲ₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaField{bcomp≲ₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[80I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[79I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -148,8 +148,8 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[80I]%
-\>[16]\AgdaSymbol{→}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[79I]%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{a₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
 \AgdaBound{a₂}\AgdaSpace{}%
@@ -166,22 +166,22 @@
 \AgdaBound{a}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a₁}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f₁}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a₂}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f₂}\AgdaSymbol{)}\<%
 \\
 %
 \>[4]\AgdaField{monad₁}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
-\>[125I]\AgdaSymbol{→}\AgdaSpace{}%
+\>[124I]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
@@ -192,11 +192,11 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[125I]%
-\>[28]\AgdaSymbol{→}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[124I]%
+\>[30]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(((}\AgdaField{return}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
@@ -204,7 +204,7 @@
 \\
 %
 \>[4]\AgdaField{monad₂}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -214,21 +214,21 @@
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaField{return}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
 %
 \>[4]\AgdaField{monad₃}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[160I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
+\>[160I]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -246,33 +246,33 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\<%
 \\
-\>[160I][@{}l@{\AgdaIndent{0}}]%
-\>[28]\AgdaSymbol{→}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[160I]%
+\>[32]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{))}\<%
 \\
 %
 \>[4]\AgdaField{unit}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaRecord{⊤}\<%
 \\
 %
 \>[4]\AgdaField{merge}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -291,10 +291,10 @@
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaField{mcomp≲ₘ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaField{mcomp≲ₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[213I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[211I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -319,8 +319,8 @@
 \AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
 \AgdaBound{b₂}\<%
 \\
-\>[.][@{}l@{}]\<[213I]%
-\>[16]\AgdaSymbol{→}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[211I]%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a₁}\AgdaSpace{}%
 \AgdaBound{b₁}\AgdaSymbol{)}\AgdaSpace{}%
@@ -331,7 +331,7 @@
 \\
 %
 \>[4]\AgdaField{idr}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -347,7 +347,7 @@
 \AgdaField{unit}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -358,7 +358,7 @@
 \\
 %
 \>[4]\AgdaField{idl}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -374,7 +374,7 @@
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -385,9 +385,9 @@
 \\
 %
 \>[4]\AgdaField{assoc}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[291I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[289I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -406,28 +406,30 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[291I]%
-\>[16]\AgdaSymbol{→}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[289I]%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaSymbol{\{((}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaField{return}\AgdaSpace{}%
+\AgdaSymbol{→}%
+\>[320I]\AgdaField{return}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{c}\AgdaSymbol{))\}))}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSymbol{))\}))}\<%
+\\
+\>[.][@{}l@{}]\<[320I]%
+\>[66]\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
@@ -436,9 +438,9 @@
 \\
 %
 \>[4]\AgdaField{comm}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}%
+\>[332I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -450,8 +452,10 @@
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[332I]%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
@@ -459,7 +463,7 @@
 \AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaSymbol{\{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
@@ -471,10 +475,10 @@
 \AgdaBound{a}\AgdaSymbol{)\}))}\<%
 \\
 %
-\>[4]\AgdaField{ichange}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaField{ichange}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[368I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[363I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSpace{}%
@@ -502,20 +506,22 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[368I]%
-\>[16]\AgdaSymbol{→}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[363I]%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a}%
+\>[392I]\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
-\AgdaBound{g}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaBound{g}\AgdaSymbol{))}\<%
+\\
+\>[392I][@{}l@{\AgdaIndent{0}}]%
+\>[32]\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
