--- a/doc/latex/Structures/ConcurrentMonoid.tex
+++ b/doc/latex/Structures/ConcurrentMonoid.tex
@@ -42,7 +42,7 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -51,13 +51,13 @@
 \\
 %
 \>[4]\AgdaField{eqₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{IsEquivalence}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}\<%
 \\
 %
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -65,20 +65,20 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaField{porderₘ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaField{porderₘ}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{IsPartialOrder}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}\<%
 \\
 %
 \>[4]\AgdaField{zeroₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\<%
 \\
 %
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}+ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -86,8 +86,8 @@
 \AgdaBound{M}\<%
 \\
 %
-\>[4]\AgdaField{scomp≲ₘ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaField{scomp≲ₘ}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSpace{}%
 \AgdaBound{z}\AgdaSpace{}%
@@ -113,7 +113,7 @@
 \\
 %
 \>[4]\AgdaField{sidl}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -126,7 +126,7 @@
 \\
 %
 \>[4]\AgdaField{sidr}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -139,7 +139,7 @@
 \\
 %
 \>[4]\AgdaField{sassoc}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -164,7 +164,7 @@
 \\
 %
 \>[4]\AgdaField{maxₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -172,8 +172,8 @@
 \AgdaBound{M}\<%
 \\
 %
-\>[4]\AgdaField{mcomp≲ₘ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaField{mcomp≲ₘ}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSpace{}%
 \AgdaBound{z}\AgdaSpace{}%
@@ -199,7 +199,7 @@
 \\
 %
 \>[4]\AgdaField{midl}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -212,7 +212,7 @@
 \\
 %
 \>[4]\AgdaField{midr}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -225,7 +225,7 @@
 \\
 %
 \>[4]\AgdaField{massoc}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -250,7 +250,7 @@
 \\
 %
 \>[4]\AgdaField{mcomm}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -265,9 +265,9 @@
 \AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaField{ichange}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[181I]\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\>[4]\AgdaField{ichange}%
+\>[13]\AgdaSymbol{:}%
+\>[177I]\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{y}\AgdaSpace{}%
@@ -280,7 +280,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\<%
 \\
-\>[181I][@{}l@{\AgdaIndent{0}}]%
+\>[177I][@{}l@{\AgdaIndent{0}}]%
 \>[16]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
