--- a/doc/latex/Structures/Monad.tex
+++ b/doc/latex/Structures/Monad.tex
@@ -70,8 +70,8 @@
 \AgdaBound{A}\<%
 \\
 %
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}>>=\AgdaUnderscore{}}}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≫=\AgdaUnderscore{}}}%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -112,7 +112,7 @@
 \>[28]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(((}\AgdaField{return}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
@@ -130,7 +130,7 @@
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaField{return}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaBound{t}\<%
@@ -165,19 +165,19 @@
 \>[95I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{))}\<%
 \\
 %
