--- a/doc/tex/form.tex
+++ b/doc/tex/form.tex
@@ -131,15 +131,17 @@ Como paso previo a la formalización de las mónadas concurrentes, se presenta e
 
 \ExecuteMetaData[latex/Structures/ConcurrentMonoid.tex]{monoidconc}
 
-En la definición \ref{def:bimonord} se presenta a un bimonoide ordenado como un conjunto parcialmente ordenado $(A,\sqsubseteq)$ junto con dos estructuras monoidales $(A,;,\mathtt{skip})$ y $(A,*,\mathtt{nothing})$ tales que $;$ y $*$ son compatibles con $\sqsubseteq$ y $*$ es conmutativa {\color{red} La compatibilidad de los operadores con el orden y la conmutatividad de $*$ no están, debería agregarlos?}. Luego, en la definición \ref{def:monoidconc} se define a un monoide concurrente como un bimonoide ordenado tal que los neutros coinciden y se cumple la ley de intercambio.
+En la definición \ref{def:bimonord} se presenta a un bimonoide ordenado como un conjunto parcialmente ordenado $(A,\sqsubseteq)$ junto con dos estructuras monoidales $(A,;,\mathtt{skip})$ y $(A,*,\mathtt{nothing})$ tales que $;$ y $*$ son compatibles con $\sqsubseteq$ y $*$ es conmutativa. Luego, en la definición \ref{def:monoidconc} se define a un monoide concurrente como un bimonoide ordenado tal que los neutros coinciden y se cumple la ley de intercambio.
 
-Al igual que en las demás estructuras, los primeros dos campos de \AgdaRecord{Concurrent Monoid} representan la noción de igualdad junto con la prueba de que esta es una relación de equivalencia. De manera similar, el tercer y cuarto campo introducen una relación de orden junto con una prueba de que esta es un preorden, es decir que es reflexiva, antisimétrica y transitiva. {\color{red} Comentario: me di cuenta de que preorder no pide antisimetría, debería no pedirla o cambio preorden por orden parcial que sí lo pide? creo que habría que cambiar todo por IsPartialOrder} Esta relación se corresponde con el orden $\sqsubseteq$ del conjunto que se pide en la definición formal y es necesaria, sobre todo, debido a la presencia de la ley de intercambio, la cual está dada, a diferencia de las demás propiedades, como una desigualdad. Se requiere entonces que exista una relación de orden sobre el conjunto \AgdaBound{M} y esta debe ser un preorden respecto de la noción de igualdad previamente introducida. Esto significa que las propiedades de reflexividad, antisimetría y transitividad están demostradas respecto de \AgdaField{$\_\cong_m\_$}. La prueba \AgdaField{porder$_m$} de que la relación \AgdaField{$\_\lesssim_m\_$} es un preorden está dada por un habitante de \AgdaRecord{IsPreorder}, el cual es un tipo \AgdaKeyword{record} definido en el módulo \href{https://agda.github.io/agda-stdlib/Relation.Binary.Structures.html}{\AgdaModule{Relation.Binary.Structures}}.
+Al igual que en las demás estructuras, los primeros dos campos de \AgdaRecord{Concurrent Monoid} representan la noción de igualdad junto con la prueba de que esta es una relación de equivalencia. De manera similar, el tercer y cuarto campo introducen una relación de orden junto con una prueba de que esta es un orden parcial, es decir que es reflexiva, antisimétrica y transitiva. Esta relación se corresponde con el orden opuesto al orden $\sqsubseteq$ del conjunto que se pide en la definición formal, es decir que \AgdaBound{x} \AgdaField{$\lesssim_m$} \AgdaBound{y} $\Leftrightarrow$ $y \sqsubseteq x$. La decisión de tomar el orden opuesto se debe a los modelos con los que se trabajó en esta tesina, en el siguiente capítulo se comprenderá mejor esta decisión al dar instancias de esta estructura. La relación de orden es necesaria, sobre todo, debido a la presencia de la ley de intercambio, la cual está dada, a diferencia de las demás propiedades, como una desigualdad. Se requiere entonces que exista un orden sobre el conjunto \AgdaBound{M} y este debe ser un orden parcial respecto de la noción de igualdad previamente introducida. Esto significa que las propiedades de reflexividad, antisimetría y transitividad están demostradas respecto de \AgdaField{$\_\cong_m\_$}. La prueba \AgdaField{porder$_m$} de que la relación \AgdaField{$\_\lesssim_m\_$} es un orden parcial está dada por un habitante de \AgdaRecord{IsPartialOrder}, el cual es un tipo \AgdaKeyword{record} definido en el módulo \href{https://agda.github.io/agda-stdlib/Relation.Binary.Structures.html}{\AgdaModule{Relation.Binary.Structures}}.
 
-Los siguientes dos campos, \AgdaField{$\_+_m\_$} y \AgdaField{zero$_m$}, representan la primera estructura monoidal del bimonoide ordenado, es decir, el operador $;$ y su neutro $\mathtt{skip}$. Seguidamente, se presentan sus leyes o propiedades: \AgdaField{sidl} y \AgdaField{sidr} son las pruebas de que \AgdaField{zero$_m$} es neutro de la operación \AgdaField{$\_+_m\_$}, a izquierda y derecha respectivamente, y \AgdaField{sassoc} es la prueba de que dicha operación es asociativa. Estos cinco campos son iguales a los que aparecen en la formalización de monoide, la única diferencia es que en las leyes se antepone la letra \AgdaField{s} para indicar que estas propiedades pertenecen a la suma. 
+Los siguientes dos campos, \AgdaField{$\_+_m\_$} y \AgdaField{zero$_m$}, representan la primera estructura monoidal del bimonoide ordenado, es decir, el operador $;$ y su neutro $\mathtt{skip}$. La prueba de que el operador es compatible con la relación de orden se introduce a continuación en el campo \AgdaField{scomp$\lesssim_m$}. Este indica que si se tienen cuatro valores \AgdaBound{x}, \AgdaBound{y}, \AgdaBound{z} y \AgdaBound{w} de tipo \AgdaBound{M}, tales que \AgdaBound{x} \AgdaField{$\lesssim_m$} \AgdaBound{z} e \AgdaBound{y} \AgdaField{$\lesssim_m$} \AgdaBound{w}, entonces la suma de los menores es menor o igual a la suma de los mayores: (\AgdaBound{x} \AgdaField{$+_m$} \AgdaBound{y}) \AgdaField{$\lesssim_m$} (\AgdaBound{z} \AgdaField{$+_m$} \AgdaBound{w}). 
 
-A continuación se introduce otra operación binaria sobre el conjunto \AgdaBound{M}: \AgdaField{max$_m$}. Esta operación junto con \AgdaField{zero$_m$} constituyen la segunda estructura monoidal del conjunto. El neutro es el mismo en ambas estructuras debido a que es un monoide concurrente. Se puede pensar a \AgdaField{max$_m$} como una versión simplificada de la operación \AgdaField{merge} de los funtores monoidales. Los campos que siguen son pruebas de que la estructura (\AgdaField{max$_m$}, \AgdaField{zero$_m$}) es monoidal: \AgdaField{midl} y \AgdaField{midr} representan pruebas de que \AgdaField{zero$_m$} es neutro respecto de \AgdaField{max$_m$}, a izquierda y derecha respectivamente, y \AgdaField{massoc} representa la prueba de que dicha operación es asociativa. Se antepone la \AgdaField{m} delante para indicar que estas propiedades pertenecen a \AgdaField{max$_m$}. 
+Seguidamente, se presentan las leyes o propiedades de la primera estructura monoidal: \AgdaField{sidl} y \AgdaField{sidr} son las pruebas de que \AgdaField{zero$_m$} es neutro de la operación \AgdaField{$\_+_m\_$}, a izquierda y derecha respectivamente, y \AgdaField{sassoc} es la prueba de que dicha operación es asociativa. Estos tres campos son iguales a los que aparecen en la formalización de monoide, la única diferencia es que se antepone la letra \AgdaField{s} para indicar que estas propiedades pertenecen a la suma. 
 
-El último campo de esta estructura es la ley de intercambio. {\color{red} Comentario: completar. No escribí esta parte porque la desigualdad está al revés que en la teoría y no se cómo justificar eso.}
+A continuación se introduce otra operación binaria sobre el conjunto \AgdaBound{M}: \AgdaField{max$_m$}. Esta operación junto con \AgdaField{zero$_m$} constituyen la segunda estructura monoidal del conjunto. El neutro es el mismo en ambas estructuras debido a que es un monoide concurrente. Se puede pensar a \AgdaField{max$_m$} como una versión simplificada de la operación \AgdaField{merge} de los funtores monoidales. Al igual que para la suma, se da la prueba de que este segundo operador es también compatible con la relación de orden. Esta prueba está representada por el campo \AgdaField{mcomp$\lesssim_m$}, cuyo tipo es muy similar a \AgdaField{scomp$\lesssim_m$}, donde la operación pasa a ser \AgdaField{max$_m$} en lugar de la suma. Los campos que siguen son pruebas de que la estructura (\AgdaField{max$_m$}, \AgdaField{zero$_m$}) es monoidal: \AgdaField{midl} y \AgdaField{midr} representan pruebas de que \AgdaField{zero$_m$} es neutro respecto de \AgdaField{max$_m$}, a izquierda y derecha respectivamente, y \AgdaField{massoc} representa la prueba de que dicha operación es asociativa. Se antepone la \AgdaField{m} delante para indicar que estas propiedades pertenecen a \AgdaField{max$_m$}. Se agrega para esta operación una propiedad extra: la conmutatividad. Esta es requerida para que el monoide sea concurrente y está representada por el campo \AgdaField{mcomm} que indica que, dados dos valores \AgdaBound{x} e \AgdaBound{y} de tipo \AgdaBound{M}, siempre se cumple que (\AgdaField{max$_m$} \AgdaBound{x y}) \AgdaField{$\cong_m$} (\AgdaField{max$_m$} \AgdaBound{y x}).
+
+El último campo de esta estructura representa la ley de intercambio. El tipo del campo \AgdaField{ichange} se obtiene de forma casi directa de la ecuación de la ley de intercambio introducida en la definición \ref{def:monoidconc}: $(x * z) ; (y * w) \sqsubseteq (x ; y) * (z ; w)$. Si se reemplazan los operadores $*$ y $;$ por \AgdaField{max$_m$} y \AgdaField{$+_m$}, respectivamente, y se invierte el orden de la desigualdad como se explicó previamente, se llega a la siguiente ecuación: (\AgdaField{max$_m$} (\AgdaBound{x} \AgdaField{$+_m$} \AgdaBound{y}) (\AgdaBound{z} \AgdaField{$+_m$} \AgdaBound{w})) \AgdaField{$\lesssim_m$} ((\AgdaField{max$_m$} \AgdaBound{x z}) \AgdaField{$+_m$} (\AgdaField{max$_m$} \AgdaBound{y w})).
 
 \section{Formalización de Mónadas Concurrentes}\label{form:monconc}
 
@@ -149,14 +151,19 @@ Se introduce a continuación la formalización de las mónadas concurrentes. Est
 
 Siguiendo el ejemplo de las mónadas, el primer campo de esta estructura es una noción de igualdad sobre el conjunto \AgdaBound{M A}, para un \AgdaBound{A} arbitrario. De igual manera, el segundo campo es la prueba de que la relación anterior es de equivalencia, y también debe darse para un \AgdaBound{A} arbitrario. Como se explicó anteriormente, es necesario que el conjunto \AgdaBound{A} pueda tomar diferentes valores ya que el funtor \AgdaBound{M} se aplicará a distintos conjuntos a lo largo de la estructura. Es por esta misma razón que los dos campos que siguen también deben definirse para cualquier conjunto \AgdaBound{A}. 
 
-En la definición \ref{def:monconc} se expone que para que una mónada sea concurrente debe ser primero una mónada monoidal ordenada. La definición \ref{def:monmonord}, por su lado,
-indica que para que una mónada sea una mónada monoidal ordenada debe contar con una estructura de funtor monoidal simétrico $(m,e)$ y una relación de orden compatible con la misma. {\color{red} Comentario: acá también se pide la compatibilidad de la estructura con el orden, debería agregarla?} Es así como, de manera similar a la formalización de monoides, el tercer campo intriduce una relación de orden entre elementos de \AgdaBound{M A}, para algún \AgdaBound{A} dado. A continuación, en el cuarto campo, se da la prueba de que dicha relación es un preorden, es decir que es reflexiva, antisimétrica y transitiva. Al igual que en los monoides, estas pruebas se dan en torno a la noción de igualdad definida previamente.
+En la definición \ref{def:monconc} se expone que para que una mónada sea concurrente debe ser primero una mónada monoidal ordenada. La definición \ref{def:monmonord}, por su lado, indica que para que una mónada sea una mónada monoidal ordenada debe contar con una estructura de funtor monoidal simétrico $(m,e)$ y una relación de orden compatible con la misma. Es así como, de manera similar a la formalización de monoides, el tercer campo introduce una relación de orden entre elementos de \AgdaBound{M A}, para algún \AgdaBound{A} dado. A continuación, en el cuarto campo, se da la prueba de que dicha relación es un orden parcial, es decir que es reflexiva, antisimétrica y transitiva. Estas pruebas se dan en torno a la noción de igualdad definida previamente. Al igual que en los monoides concurrentes, el orden considerado es el opuesto al utilizado en la teoría, de manera que \AgdaBound{x} \AgdaField{$\lesssim_m$} \AgdaBound{y} $\Leftrightarrow$ $y \sqsubseteq x$. 
 
-Los campos siguientes introducen la estructura monádica. Estos están dados, al igual que en la formalización de mónada, siguiendo la definición de mónadas como sistemas de extensión (definición \ref{def:sistext}). La función \AgdaField{return} toma un elemento de un conjunto \AgdaBound{A} arbitrario y lo encapsula en la mónada, devolviendo un habitante del tipo \AgdaBound{M A}, mientras que el operador \AgdaField{$\gg=$} sirve para secuenciar dos computaciones. Los campos \AgdaField{monad$_1$}, \AgdaField{monad$_2$} y \AgdaField{monad$_3$} representan las tres leyes de mónadas y son iguales a los campos \AgdaField{law$_1$}, \AgdaField{law$_2$} y \AgdaField{law$_3$} de \AgdaRecord{Monad}. Los primeros dos indican que \AgdaField{return} es neutro a derecha e izquierda de \AgdaField{$\gg=$} y el último indica la asociatividad de dicho operador.
+Los campos siguientes introducen la estructura monádica. Estos están dados, al igual que en la formalización de mónada, siguiendo la definición de mónadas como sistemas de extensión (definición \ref{def:sistext}). La función \AgdaField{return} toma un elemento de un conjunto \AgdaBound{A} arbitrario y lo encapsula en la mónada, devolviendo un habitante del tipo \AgdaBound{M A}, mientras que el operador \AgdaField{$\gg=$} sirve para secuenciar dos computaciones. 
 
-Una vez establecida la estructura monádica, se pasa a introducir la estructura monoidal que se requiere en la definición \ref{def:monmonord} para que la mónada sea una mónada monoidal ordenada. El elemento neutro es un morfismo $e : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. Como se mencionó anteriormente, el objeto terminal $\mathbf{1} = \{\star\} \in \text{\bf ob Set}$ se representa en Agda como el tipo \AgdaDatatype{$\top$}, cuyo único habitante es \AgdaInductiveConstructor{tt}. Al ser un conjunto de un único elemento, al igual que en el caso de la formalización de funtor monoidal, $e$ se define como un campo \AgdaField{unit} de tipo \AgdaBound{M} \AgdaDatatype{$\top$} en lugar de como una función de tipo \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$} ya que hay un único argumento posible para la función. Según la definición \ref{def:monconc}, para que la mónada sea una mónada concurrente, el morfismo $e$ debe ser igual a $\eta_{\mathbf{1}} : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. Considerando $\mathbf{1} =$ \AgdaDatatype{$\top$}, luego $e$ debería ser igual a \AgdaField{return} \AgdaSymbol{\{}\AgdaDatatype{$\top$}\AgdaSymbol{\} :} \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$}. Como \AgdaDatatype{$\top$} tiene un único habitante, se puede obviar el argumento y \AgdaField{unit} debería ser igual a \AgdaField{return} \AgdaInductiveConstructor{tt} \AgdaSymbol{:} \AgdaBound{M} \AgdaDatatype{$\top$}. {\color{red} Comentario: no me queda claro cómo concluir que son iguales, el hecho de que \AgdaDatatype{$\top$} tenga un sólo habitante no indica que \AgdaBound{M} \AgdaDatatype{$\top$} necesariamente también tenga uno sólo, o si? Podría sacar \AgdaField{unit} y en su lugar en las leyes poner directamente \AgdaField{return} \AgdaInductiveConstructor{tt}?}
+Antes de pasar a las leyes de las mónadas, se introduce la compatibilidad del operador \AgdaField{$\gg=$} con la relación de orden. Esta propiedad está dada por el campo \AgdaField{bcomp$\lesssim_m$}. En la definición \ref{def:ordmon}, se define una mónada ordenada como una mónada que tiene un orden $\sqsubseteq_I$ sobre $\mathit{T} I$ para cada conjunto $I$, donde este orden enriquece a los morfismos $A \rightarrow \mathit{T} B$ con un orden $\sqsubseteq_{A,B}$ tal que $f \sqsubseteq_{A,B} g$ si y sólo si $\forall a: \mathbf{1} \rightarrow A, f \circ a \sqsubseteq_B g \circ a$. En Agda, como ya se mencionó anteriormente, no tiene sentido considerar una función que toma elementos del conjunto $\mathbf{1}$ (\AgdaDatatype{$\top$} en Agda) puesto que este tiene un único elemento. Luego, en lugar de tomar morfismos $a : \mathbf{1} \rightarrow A$, se toman directamente valores \AgdaBound{a} $:$ \AgdaBound{A}. Se considera entonces que una función \AgdaBound{f$_1$} $:$ \AgdaBound{A} $\rightarrow$ \AgdaBound{M B} es menor o igual a una función \AgdaBound{f$_2$} $:$ \AgdaBound{A} $\rightarrow$ \AgdaBound{M B} si y sólo si para todo \AgdaBound{a} $:$ \AgdaBound{A} se cumple que (\AgdaBound{f$_1$ a}) \AgdaField{$\lesssim_m$} (\AgdaBound{f$_2$ a}). La compatibilidad del operador \AgdaField{$\gg=$} con el orden \AgdaField{$\lesssim_m$} se define entonces de la siguiente manera: dados dos valores \AgdaBound{a$_1$} y \AgdaBound{a$_2$} de tipo \hbox{\AgdaBound{M A}} y dos funciones \AgdaBound{f$_1$} y \AgdaBound{f$_2$} de tipo \AgdaBound{A} $\rightarrow$ \AgdaBound{M B}, si se tiene que \hbox{\AgdaBound{a$_1$} \AgdaField{$\lesssim_m$} \AgdaBound{a$_2$}} y \AgdaSymbol{$\forall$} (\AgdaBound{a} $:$ \AgdaBound{A}) $\rightarrow$ (\AgdaBound{f$_1$ a}) \AgdaField{$\lesssim_m$} (\AgdaBound{f$_2$ a}), entonces (\AgdaBound{a$_1$} \AgdaField{$\gg=$} \AgdaBound{f$_1$}) \AgdaField{$\lesssim_m$} (\AgdaBound{a$_2$} \AgdaField{$\gg=$} \AgdaBound{f$_2$}).
 
-Continuando con la estructura monoidal, el siguiente campo es la función \AgdaField{merge}, la cual representa la transformación natural $m$. Este campo está definido de igual manera que el \AgdaField{merge} de \AgdaRecord{MonoidalFunctor}. En dicha estructura, a continuación del \AgdaField{merge} se introduce el campo \AgdaField{fmap}, el cual representa la asignación de morfismos a morfismos del funtor $\mathit{M}$. En el caso de las mónadas concurrentes este campo no es necesario puesto que puede construirse tal asignación a partir del operador \AgdaField{$\gg=$}. Sea \AgdaBound{f} \AgdaSymbol{:} \AgdaBound{A} \AgdaSymbol{$\rightarrow$}  \AgdaBound{B} una función, luego (\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} $f$ \AgdaBound{a})) es una función de tipo \AgdaBound{M A} \AgdaSymbol{$\rightarrow$} \AgdaBound{M B}. De esta manera la asignación de morfismos a morfismos del funtor queda definida. {\color{red} Comentario: demostrar equivalencia?} 
+Los campos \AgdaField{monad$_1$}, \AgdaField{monad$_2$} y \AgdaField{monad$_3$} representan las tres leyes de mónadas y son iguales a los campos \AgdaField{law$_1$}, \AgdaField{law$_2$} y \AgdaField{law$_3$} de \AgdaRecord{Monad}. Los primeros dos indican que \AgdaField{return} es neutro a derecha e izquierda de \AgdaField{$\gg=$} y el último indica la asociatividad de dicho operador.
+
+Una vez establecida la estructura monádica, se pasa a introducir la estructura monoidal que se requiere en la definición \ref{def:monmonord} para que la mónada sea una mónada monoidal ordenada. El elemento neutro es un morfismo $e : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. Como se mencionó anteriormente, el objeto terminal $\mathbf{1} = \{\star\} \in \text{\bf ob Set}$ se representa en Agda como el tipo \AgdaDatatype{$\top$}, cuyo único habitante es \AgdaInductiveConstructor{tt}. Al ser un conjunto de un único elemento, al igual que en el caso de la formalización de funtor monoidal, $e$ se define como un campo \AgdaField{unit} de tipo \AgdaBound{M} \AgdaDatatype{$\top$} en lugar de como una función de tipo \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$} ya que hay un único argumento posible para la función. Según la definición \ref{def:monconc}, para que la mónada sea una mónada concurrente, el morfismo $e$ debe ser igual a $\eta_{\mathbf{1}} : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. Considerando $\mathbf{1} =$ \AgdaDatatype{$\top$}, luego $e$ debería ser igual a \AgdaField{return} \AgdaSymbol{\{}\AgdaDatatype{$\top$}\AgdaSymbol{\} :} \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$}. Como \AgdaDatatype{$\top$} tiene un único habitante, se obtiene que \AgdaField{unit} debe ser igual a \AgdaField{return} \AgdaInductiveConstructor{tt} \AgdaSymbol{:} \AgdaBound{M} \AgdaDatatype{$\top$}. {\color{red} Cómo defino unit = return tt? dentro de la estructura?}
+
+Continuando con la estructura monoidal, el siguiente campo es la función \AgdaField{merge}, la cual representa la transformación natural $m$. Este campo está definido de igual manera que el \AgdaField{merge} de \AgdaRecord{MonoidalFunctor}. En dicha estructura, a continuación del \AgdaField{merge} se introduce el campo \AgdaField{fmap}, el cual representa la asignación de morfismos a morfismos del funtor $\mathit{M}$. En el caso de las mónadas concurrentes este campo no es necesario puesto que puede construirse tal asignación a partir del operador \AgdaField{$\gg=$}. Sea \AgdaBound{f} \AgdaSymbol{:} \AgdaBound{A} \AgdaSymbol{$\rightarrow$}  \AgdaBound{B} una función, luego (\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} $f$ \AgdaBound{a})) es una función de tipo \AgdaBound{M A} \AgdaSymbol{$\rightarrow$} \AgdaBound{M B}. De esta manera la asignación de morfismos a morfismos del funtor queda definida. {\color{red} Comentario: demostrar equivalencia? Se demostraría para un caso particular igual, no? Porque no tengo una definición de fmap concreta acá} 
+
+El campo que sigue, \AgdaField{mcomp$\lesssim_m$}, representa la compatibilidad del operador \AgdaField{merge} con la relación de orden \AgdaField{$\lesssim_m$}. Dados \AgdaBound{a$_1$} y \AgdaBound{a$_2$} de tipo \AgdaBound{M A} y \AgdaBound{b$_1$} y \AgdaBound{b$_2$} de tipo \AgdaBound{M B}, si se tiene que \hbox{\AgdaBound{a$_1$} \AgdaField{$\lesssim_m$} \AgdaBound{a$_2$}} y \AgdaBound{b$_1$} \AgdaField{$\lesssim_m$} \AgdaBound{b$_2$}, luego se debe cumplir que (\AgdaField{merge} \AgdaBound{a$_1$ b$_1$}) \AgdaField{$\lesssim_m$} (\AgdaField{merge} \AgdaBound{a$_2$ b$_2$}). 
 
 Es el turno ahora de las propiedades que deben cumplirse para que \AgdaField{merge} y \AgdaField{unit} formen una estructura monoidal. Estas propiedades son tres y están definidas de manera similar a las de la formalización de funtor monoidal, salvo por el uso del campo \AgdaField{fmap}. \AgdaField{idr} representa la proposición que indica que \AgdaField{unit} es un neutro a derecha del operador \AgdaField{merge}. En el \AgdaKeyword{record} \AgdaRecord{MonoidalFunctor} esta propiedad tiene tipo \hbox{\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge unit} \AgdaBound{a}) \AgdaField{$\cong_m$} (\AgdaField{fmap} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) \AgdaBound{a})}. Reemplazando \AgdaField{fmap} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) por la función propuesta anteriormente, donde se sustituye $f$ por (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})), quedaría el siguiente tipo: 
 \begin{center}
@@ -195,5 +202,29 @@ Se puede reducir ahora el lado izquierdo de la ecuación, reemplazando la variab
 \AgdaSymbol{$\forall$} \{\AgdaBound{A B C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) (\AgdaBound{b} \AgdaSymbol{:} \AgdaBound{M B}) (\AgdaBound{c} \AgdaSymbol{:} \AgdaBound{M C}) \AgdaSymbol{$\rightarrow$} \\ ((\AgdaField{merge} (\AgdaField{merge} \AgdaBound{a b}) \AgdaBound{c}) \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\})) \AgdaField{$\cong_m$} (\AgdaField{merge} \AgdaBound{a} (\AgdaField{merge} \AgdaBound{b c}))
 \end{center}
 
-Queda por analizar el último campo de la estructura, el cual postula la relación que deben tener los operadores \AgdaField{$\gg=$} y \AgdaField{merge} para que la mónada sea concurrente. Este se denomina \AgdaField{ichange} y representa la ley de intercambio. {\color{red} Comentario: completar. Idem monoide concurrente no se cómo justificar que la desigualdad está invertida.}
+Como se mencionó anteriormente, para que la mónada sea una mónada monoidal ordenada, esta debe contar con una estructura de funtor monoidal simétrico. Para que sea simétrico, además de las leyes que se probaron sobre la estructura monoidal, debe haber una propiedad extra: la conmutatividad del operador \AgdaField{merge}. Esta propiedad se representa con el campo \AgdaField{comm}. El tipo de este campo se construye de manera similar al anterior, donde de un lado se tiene simplemente (\AgdaField{merge} \AgdaBound{a b}), y del otro se aplica (\AgdaField{merge} \AgdaBound{b a}) seguido de una aplicación de \AgdaField{$\gg=$} con una función que da vuelta el orden del producto cartesiano. 
 
+Queda por analizar el último campo de la estructura, el cual postula la relación que deben tener los operadores \AgdaField{$\gg=$} y \AgdaField{merge} para que la mónada sea concurrente. Este se denomina \AgdaField{ichange} y representa la ley de intercambio. Sean \AgdaBound{a$'$} $:$ $\mathbf{1} \rightarrow \mathit{M} A$, \AgdaBound{b$'$} $:$ $\mathbf{1} \rightarrow \mathit{M} B$, \AgdaBound{f} $:$ $A \rightarrow \mathit{M} C$ y \AgdaBound{g} $:$ $B \rightarrow \mathit{M} D$. {\color{red} Comentario: puse que a' y b' sean $1 \rightarrow M X$ porque en la formalización en realidad son directamente $M X$, pero en la teoría la ley se da con todas funciones. Cierra todo pero queda medio sin justificar por qué inicialmente los tomo así y no como funciones cualesquiera, como podría mejorar esto?} En la definición \ref{def:monconc}, se presenta la ley de intercambio de la siguiente manera: $(f \star g) \bullet (a' \star b') \sqsubseteq (f \bullet a') \star (g \bullet b')$, donde $f \star g = m \circ (f \times g)$ y $f \bullet g = f^* \circ g$. Esta ley se puede reescribir entonces como:
+\begin{equation*}
+(m \circ (f \times g))^* \circ (m \circ (a' \times b')) \sqsubseteq (m \circ ((f^* \circ a') \times (g^* \circ b')))
+\end{equation*}
+
+Como ya sucedió varias veces a lo largo del proceso de formalización, se tienen en este caso dos funciones que tienen como dominio el conjunto terminal $\mathbf{1}$. De igual manera que en las demás ocasiones, estas serán representadas en la formalización de manera simplificada, en el caso de \AgdaBound{a$'$} se tomará un \AgdaBound{a} $:$ \AgdaBound{M A}, y en el caso de \AgdaBound{b$'$} se tomará un \AgdaBound{b} $:$ \AgdaBound{M B}. Haciendo estos cambios, la fórmula se reescribe como se muestra a continuación:
+\begin{equation*}
+(m \circ (f \times g))^* \ (m\ (a\  \AgdaInductiveConstructor{,}\ b)) \sqsubseteq (m \circ ((f^*\ a) \times (g^*\ b)))
+\end{equation*}
+
+La transformación natural $m$ se reemplaza en la formalización dada con el operador \AgdaField{merge}, el cual no toma un par ordenado sino dos elementos por separado. Haciendo este reemplazo se obtiene la siguiente fórmula:
+\begin{equation*}
+(\AgdaField{merge} \circ (f \times g))^* \ (\AgdaField{merge}\ a\ b) \sqsubseteq (\AgdaField{merge}\ (f^*\ a)\ (g^*\ b))
+\end{equation*}
+
+El operador $\_^*$, por su parte, está representado por la función \AgdaField{$\gg=$}, donde la expresión $h^* x$ es equivalente a escribir \AgdaBound{x} \AgdaField{$\gg=$} \AgdaBound{h}. Luego de hacer esta sustitución la fórmula queda como sigue:
+\begin{equation*}
+(\AgdaField{merge}\ a\ b) \ \AgdaField{$\gg=$} \ (\AgdaField{merge} \circ (f \times g)) \sqsubseteq (\AgdaField{merge} \ (a\ \AgdaField{$\gg=$}\ f) \ (b\ \AgdaField{$\gg=$}\ g))
+\end{equation*}
+
+La aplicación (\AgdaField{merge} $\circ \ (f \times g)$) se reescribe en Agda como una función que toma un par \hbox{(\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b})}, aplica la función $f$ a \AgdaBound{a} y la función $g$ a \AgdaBound{b}, y luego el operador \AgdaField{merge} a los dos resultados obtenidos. Es decir, se expresa de la siguiente manera: ($\lambda$ \{ (\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) $\rightarrow$ (\AgdaField{merge} (\AgdaBound{f a}) (\AgdaBound{g b})) \} ). Haciendo esta sustitución y cambiando el orden $\sqsubseteq$ por el campo \AgdaField{$\lesssim_m$} (invirtiendo el orden de la desigualdad puesto que se toma el orden opuesto), se obtiene finalmente el tipo del campo \AgdaField{ichange}:
+\begin{equation*}
+(\AgdaField{merge} \ (a\ \AgdaField{$\gg=$}\ f) \ (b\ \AgdaField{$\gg=$}\ g)) \ \AgdaField{$\lesssim_m$} \ (\AgdaField{merge}\ a\ b) \ \AgdaField{$\gg=$} \ (\lambda\  \{\ (\AgdaBound{a} \ \AgdaInductiveConstructor{,} \ \AgdaBound{b}) \ \rightarrow \ (\AgdaField{merge} \ (\AgdaBound{f a}) \ (\AgdaBound{g b})) \ \}\ ) 
+\end{equation*}
